--- a/system_service.html
+++ b/system_service.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>流通服务-凯东源城配官网-专业的快消品城市配送服务商</title>
+	<title>系统服务-凯东源城配官网-专业的快消品城市配送服务商</title>
 	<meta name="keywords"  content="仓库租赁、仓库出租、商超配送、超市配送、门店配送、便利店配送、城市配送、快消品城配、仓配一体化、供应链优化、流通服务商" />
 
 	<meta name="description" content="凯东源城配可以为企业级客户提供仓库租赁、仓库托管、同城物流配送、商超配送、连锁便利店配送，涵盖仓到仓、仓到店等多种配送形式，能为客户提供分拣、分装、贴标、一件代发等增值服务。另有“流通服务商”模式专为品牌商提供快消品供应链优化服务。" />
@@ -39,7 +39,7 @@
 	<!-- 加载头部和尾部内容 -->
 	<script src="load_common.js"></script>
 	<script>
-		addHtml("images/services/cangchu1.jpg","Product","Services","产品服务",'<li class="WarehousingService"><a href="WarehousingService.html">仓储服务</a></li><li class="DistributionService"><a href="DistributionService.html">配送服务</a></li><li class="WarehouseIntegration"><a href="./WarehouseIntegration.html">仓配一体</a></li><li class="Value-added_logistics_service"><a href="Value-added_logistics_service.html">增值服务</a></li><li class="CirculationService"><a href="CirculationService.html">流通服务</a></li><li class="VendingMachine"><a href="system_service.html">系统服务</a></li><li class="VendingMachine"><a href="consultation_service.html">物流咨询服务</a></li>',"流通服务","THIRD PARTY LOGISTICS",'<p>在快消品行业传统的的分销链条中，由于涉及环节过多，仓配分散零乱，导致门店进货成本偏高，产品市场竞争力很弱。凯东源主推的“流通服务商”模式，通过专业的服务团队和一站式订货平台，帮助客户优化流通节点，统一物流配送标准，真正做到扁平、可视、标准和快速响应，大幅提升竞争力。</p><h4>去中间层优化快消品供应链</h4><img src="images/services/liutong1.jpg" alt="干线落地配-仓配一体-深圳市凯东源现代物流股份有限公司" />');
+		addHtml("images/services/cangchu1.jpg","Product","Services","产品服务",'<li class="WarehousingService"><a href="WarehousingService.html">仓储服务</a></li><li class="DistributionService"><a href="DistributionService.html">配送服务</a></li><li class="WarehouseIntegration"><a href="./WarehouseIntegration.html">仓配一体</a></li><li class="Value-added_logistics_service"><a href="Value-added_logistics_service.html">增值服务</a></li><li class="CirculationService"><a href="CirculationService.html">流通服务</a></li><li class="VendingMachine"><a href="system_service.html">系统服务</a></li><li class="VendingMachine"><a href="consultation_service.html">物流咨询服务</a></li>',"系统服务","THIRD PARTY LOGISTICS",'<p>在为物流同行、客户提供物流系统服务及开发。</p><img src="images/services/system_t_service.png" alt="干线落地配-仓配一体-深圳市凯东源现代物流股份有限公司" />');
 
 		$(".Tab>.tabHead>div").click(function(){
 			$(this).attr('class','tabFirst').siblings().removeClass('tabFirst');
