--- a/consultation_service.html
+++ b/consultation_service.html
@@ -2,42 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>物流咨询服务-凯东源城配官网-专业的快消品城市配送服务商</title>
+	<title>系统服务-凯东源城配官网-专业的快消品城市配送服务商</title>
 	<meta name="keywords"  content="仓库租赁、仓库出租、商超配送、超市配送、门店配送、便利店配送、城市配送、快消品城配、仓配一体化、供应链优化、流通服务商" />
 
 	<meta name="description" content="凯东源城配可以为企业级客户提供仓库租赁、仓库托管、同城物流配送、商超配送、连锁便利店配送，涵盖仓到仓、仓到店等多种配送形式，能为客户提供分拣、分装、贴标、一件代发等增值服务。另有“流通服务商”模式专为品牌商提供快消品供应链优化服务。" />
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="icon" href="images/LOGO.png">
+	<link rel="stylesheet" type="text/css" href="css/services.css">
 	<link rel="stylesheet" href="iconfont/iconfont.css">
+	<link rel="icon" href="images/LOGO.png">
 	<script src='js/jquery-1.12.3.min.js'></script>
-	<style>
-		.content{
-			margin-top: 30px;
-		}
-		.content>div{
-			margin-bottom: 30px;
-		}
-		.content>div>span{
-			color: #e9811a;
-		}
-		.content>div>p{
-			margin-top: 12px;
-		}
-		@media screen and (max-width: 768px){
-			.content{
-				margin-top: 5vw;
-			}
-			.content>div{
-				margin-bottom: 5vw;
-			}
-			.content>div>p{
-				margin-top: 1.8vw;
-			}
-		}
-	</style>
 </head>
 <body>
-		
 	<!-- 头部开始 -->
 	<header>
 		
@@ -47,67 +22,7 @@
 	<!-- 头部结束 -->
 
 	<!-- 主体内容开始 -->
-	<div class="container" style="text-align: center;">
-
-	<div><img style="width:100%;" src="images/services/top.jpg"></div>
-
-	<div style="font-size:52pt;margin-top:50px;color:#fc4607">我们可以帮您</div>
-	<div><img style="width:68%;margin-top:50px;" src="images/services/mid.png"></div>
-
-	<div><img style="width:100%;margin-top:50px;" src="images/services/mid.jpg"></div>
-
-	<div style="width:950px;height:450px;margin-top:50px;margin:0 auto;background-image:url(images/services/mid_bg.png);background-size:100% 100%;font-weight:200;">
-		<div style="font-size:52pt;color:#fc4607;margin-top:20px;font-weight:normal;">价值体现</div>
-		<div style="width:200px;height:220px;background-color:#e6e6e6;margin-left:50px;margin-top:50px;float:left;">
-			<img style="width:60%;margin-top:15px;" src="images/services/item_1.png">
-			<div style="margin-top:5px;">仓储成本降低<span style="color:#f14c00;margin-left:2px;font-weight:700;">30%+</span></div>
-			<div style="margin-top:5px;">运营效率提升<span style="color:#f14c00;margin-left:2px;font-weight:700;">30%+</span></div>
-		</div>
-		<div style="width:200px;height:220px;background-color:#e6e6e6;margin-left:15px;margin-top:50px;float:left;">
-			<img style="width:60%;margin-top:15px;" src="images/services/item_2.png">
-			<div style="margin-top:5px;">车辆配载率提升<span style="color:#f14c00;margin-left:2px;font-weight:700;">20%+</span></div>
-			<div style="margin-top:5px;">配送时效提升<span style="color:#f14c00;margin-left:2px;font-weight:700;">20%+&nbsp;&nbsp;&nbsp;</span></div>
-		</div>
-		<div style="width:200px;height:220px;background-color:#e6e6e6;margin-left:15px;margin-top:50px;float:left;">
-			<img style="width:60%;margin-top:25px;" src="images/services/item_3.png">
-			<div style="margin-top:5px;">招标协助 流程透明</div>
-			<div style="margin-top:5px;">周期缩短<span style="color:#f14c00;margin-left:2px;font-weight:700;">20天以上</span></div>
-		</div>
-		<div style="width:200px;height:220px;background-color:#e6e6e6;margin-left:15px;margin-top:50px;float:left;">
-			<img style="width:60%;margin-top:25px;" src="images/services/item_4.png">
-			<div style="margin-top:5px;">项目启动 应急响应</div>
-			<div style="margin-top:5px;">全案策划 全案输出</div>
-		</div>
-	</div>
-
-	<div style="font-size:52pt;margin-top:50px;color:#fc4607">我们的优势</div>
-	<div style="width:950px;height:450px;margin-top:50px;margin:0 auto;font-weight:200;font-size:11.5pt;">
-		<div style="width:270px;height:220px;margin-left:50px;margin-top:50px;float:left;">
-			<img style="width:82%;margin-top:15px;" src="images/services/item_5.png">
-			<div style="margin-top:5px;"><span style="color:#ff3800;font-weight:normal;font-size:18pt;">资深的顾问团队</span></div>
-			<div style="margin-top:5px;">团队成员从业十年以上,&nbsp;&nbsp;</div>
-			<div style="margin-top:0px;">专业能力过硬　　　　&nbsp;&nbsp;&nbsp;</div>
-		</div>
-		<div style="width:270px;height:220px;margin-left:15px;margin-top:50px;float:left;">
-			<img style="width:82%;margin-top:15px;" src="images/services/item_6.png">
-			<div style="margin-top:5px;"><span style="color:#ff3800;font-weight:normal;font-size:18pt;">丰富的实战经验</span></div>
-			<div style="margin-top:5px;">&nbsp;&nbsp;集团公司拥有丰富的物流&nbsp;&nbsp;</div>
-			<div style="margin-top:0px;">&nbsp;&nbsp;行业实战经验积累　　　&nbsp;&nbsp;</div>
-		</div>
-		<div style="width:270px;height:220px;margin-left:15px;margin-top:50px;float:left;">
-			<img style="width:82%;margin-top:15px;" src="images/services/item_7.png">
-			<div style="margin-top:5px;"><span style="color:#ff3800;font-weight:normal;font-size:18pt;">先进的信息化系统</div>
-			<div style="margin-top:5px;">&nbsp;&nbsp;&nbsp;&nbsp;自主研发的SAAS版K56系统、&nbsp;</div>
-			<div style="margin-top:5px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;包含专业的订单、仓储、运输、&nbsp;</div>
-			<div style="margin-top:5px;margin-left:-2px;">计费等功能，模块可定制&nbsp;&nbsp;&nbsp;</div>
-		</div>
-	</div>
-
-    <div style="background-color:#f2f2f2;margin-top:80px;padding:40px;">
-		<div style="font-size:52pt;color:#fc4607;">如何与我们合作</div>
-		<div><img style="width:1000px;margin-top:30px;" src="images/services/bottom.png"></div>
-    </div>
-		
+	<div class="container">
 	</div>
 	<!-- 主体内容结束 -->
 
@@ -123,7 +38,15 @@
 
 	<!-- 加载头部和尾部内容 -->
 	<script src="load_common.js"></script>
+	<script>
+		addHtml("images/services/cangchu1.jpg","Product","Services","产品服务",'<li class="WarehousingService"><a href="WarehousingService.html">仓储服务</a></li><li class="DistributionService"><a href="DistributionService.html">配送服务</a></li><li class="WarehouseIntegration"><a href="./WarehouseIntegration.html">仓配一体</a></li><li class="Value-added_logistics_service"><a href="Value-added_logistics_service.html">增值服务</a></li><li class="CirculationService"><a href="CirculationService.html">流通服务</a></li><li class="VendingMachine"><a href="system_service.html">系统服务</a></li><li class="VendingMachine"><a href="consultation_service.html">物流咨询服务</a></li>',"物流咨询服务","THIRD PARTY LOGISTICS",'<div class="container" style="text-align: center;"><div><img style="width:100%;" src="images/services/top.jpg"></div><div style="font-size:43pt;margin-top:50px;color:#fc4607">我们可以帮您</div><div><img style="width:68%;margin-top:50px;" src="images/services/mid.png"></div><div><img style="width:100%;margin-top:50px;" src="images/services/mid.jpg"></div><div style="width:100%;height:450px;margin-top:50px;margin:0 auto;background-image:url(images/services/mid_bg.png);background-size:100% 100%;font-weight:200;"><div style="font-size:43pt;color:#fc4607;margin-top:20px;font-weight:normal;">价值体现</div><div style="width:20%;height:220px;background-color:#e6e6e6;margin-left:5.5%;margin-top:50px;float:left;"><img style="width:60%;margin-top:15px;" src="images/services/item_1.png"><div style="margin-top:5px;">仓储成本降低<span style="color:#f14c00;margin-left:2px;font-weight:700;">30%+</span></div><div style="margin-top:5px;">运营效率提升<span style="color:#f14c00;margin-left:2px;font-weight:700;">30%+</span></div></div><div style="width:20%;height:220px;background-color:#e6e6e6;margin-left:3%;margin-top:50px;float:left;"><img style="width:60%;margin-top:15px;" src="images/services/item_2.png"><div style="margin-top:5px;">车辆配载率提升<span style="color:#f14c00;margin-left:2px;font-weight:700;">20%+</span></div><div style="margin-top:5px;">配送时效提升<span style="color:#f14c00;margin-left:2px;font-weight:700;">20%+&nbsp;&nbsp;&nbsp;</span></div></div><div style="width:20%;height:220px;background-color:#e6e6e6;margin-left:3%;margin-top:50px;float:left;"><img style="width:60%;margin-top:25px;" src="images/services/item_3.png"><div style="margin-top:5px;">招标协助 流程透明</div><div style="margin-top:5px;">周期缩短<span style="color:#f14c00;margin-left:2px;font-weight:700;">20天以上</span></div></div><div style="width:20%;height:220px;background-color:#e6e6e6;margin-left:3%;margin-top:50px;float:left;"><img style="width:60%;margin-top:25px;" src="images/services/item_4.png"><div style="margin-top:5px;">项目启动 应急响应</div><div style="margin-top:5px;">全案策划 全案输出</div></div></div><div style="font-size:43pt;margin-top:50px;color:#fc4607">我们的优势</div><div style="width:100%;height:450px;margin-top:50px;margin:0 auto;font-weight:200;font-size:11.5pt;"><div style="width:29%;height:220px;margin-top:50px;float:left;"><img style="width:90%;margin-top:15px;" src="images/services/item_5.png"><div style="margin-top:5px;"><span style="color:#ff3800;font-weight:normal;font-size:18pt;">资深的顾问团队</span></div><div style="margin-top:5px;">团队成员从业十年以上,&nbsp;&nbsp;</div><div style="margin-top:0px;">专业能力过硬　　　　&nbsp;&nbsp;&nbsp;</div></div><div style="width:29%;height:220px;margin-left:6%;margin-top:50px;float:left;"><img style="width:90%;margin-top:15px;" src="images/services/item_6.png"><div style="margin-top:5px;"><span style="color:#ff3800;font-weight:normal;font-size:18pt;">丰富的实战经验</span></div><div style="margin-top:5px;">&nbsp;&nbsp;集团公司拥有丰富的物流&nbsp;&nbsp;</div><div style="margin-top:0px;">&nbsp;&nbsp;行业实战经验积累　　　&nbsp;&nbsp;</div></div><div style="width:29%;height:220px;margin-left:6%;margin-top:50px;float:left;"><img style="width:90%;margin-top:15px;" src="images/services/item_7.png"><div style="margin-top:5px;"><span style="color:#ff3800;font-weight:normal;font-size:18pt;">先进的信息化系统</div><div style="margin-top:5px;">&nbsp;&nbsp;&nbsp;&nbsp;自主研发的SAAS版K56系统、&nbsp;</div><div style="margin-top:5px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;包含专业的订单、仓储、运输、&nbsp;</div><div style="margin-top:5px;margin-left:-2px;">计费等功能，模块可定制&nbsp;&nbsp;&nbsp;</div></div></div><div style="background-color:#f2f2f2;margin-top:80px;padding:40px;"><div style="font-size:43pt;color:#fc4607;">如何与我们合作</div>	<div><img style="width:100%;margin-top:30px;" src="images/services/bottom.png"></div></div></div>');
 
+		$(".Tab>.tabHead>div").click(function(){
+			$(this).attr('class','tabFirst').siblings().removeClass('tabFirst');
+			$('.tabContent>div').eq($(this).index()).fadeIn(100).siblings().fadeOut(20);
+		})
+
+	</script>
 	<script>
 		var  _hmt  =  _hmt  ||  [];
 		(function()  {
@@ -133,5 +56,6 @@
 		    s.parentNode.insertBefore(hm,  s);
 		})();
 	</script>
+	
 </body>
 </html>
