适配手机移动端

--- a/merchants_to_join.html
+++ b/merchants_to_join.html
@@ -7,6 +7,7 @@
 
 	<meta name="description" content="凯东源城配可以为企业级客户提供仓库租赁、仓库托管、同城物流配送、商超配送、连锁便利店配送，涵盖仓到仓、仓到店等多种配送形式，能为客户提供分拣、分装、贴标、一件代发等增值服务。另有“流通服务商”模式专为品牌商提供快消品供应链优化服务。" />
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/merchants_to_join.css">
 	<link rel="icon" href="images/LOGO.png">
 	<link rel="stylesheet" href="iconfont/iconfont.css">
 	<script src='js/jquery-1.12.3.min.js'></script>
@@ -51,59 +52,59 @@
 
 	<div><img style="width:100%;" src="images/merchants_join/top.jpg"></div>
 
-	<div style="font-size:52pt;margin-top:50px;color:#fc4607">5大项目优势</div>
-	<div><img style="width:65%;margin-top:50px;" src="images/merchants_join/mid.png"></div>
+	<div class="part-title" style="color:#fc4607">5大项目优势</div>
+	<div><img class="part-image" src="images/merchants_join/mid.png"></div>
 
-    <div style="background-color:#f2eeeb;margin-top:80px;padding:40px;">
-		<div style="font-size:52pt;color:#fc4607;">9大加盟支持</div>
-		<div><img style="width:72%;margin-top:30px;" src="images/merchants_join/bottom.png"></div>
+    <div class="part-top" style="background-color:#f1eeeb;margin-bottom: 15px;">
+		<div class="part-title" style="color:#fc4607;">9大加盟支持</div>
+		<div><img class="part-2-img" src="images/merchants_join/bottom.png"></div>
     </div>
 
 
-	<div style="font-size:52pt;color:#fc4607;margin-top:50px;">加盟条件</div>
-	<div style="width:804px;height:280px;margin:0 auto;text-align:left;;margin-top:50px;">
-		<div style="width:186px;height:100%;background-color:#ec652b;margin-right:20px;float:left;color:white;font-size:16pt;position:relative;">
-            <div style="width:100%;height:100px;padding-left:15px;box-sizing:border-box;-moz-box-sizing:border-box;
+	<div class="part-title" style="color:#fc4607;">加盟条件</div>
+	<div class="bottom-d" style="margin:0 auto;text-align:left;margin-top:50px;">
+		<div class="bottom-d-item bottom-d-item-left" style="height:100%;background-color:#ec652b;float:left;color:white;position:relative;">
+            <div class="bottom-d-tiem-text" style="height:100px;box-sizing:border-box;-moz-box-sizing:border-box;
 -webkit-box-sizing:border-box;">
 				</br>
 				认同凯东源城配</br>
 	            的经营理念
             </div>
-            <div style="width:100%;position:absolute;bottom:0;height:100px;text-align:center;display:flex;align-items:center;justify-content:center;">
+            <div class="bottom-d-tiem-img" style="width:100%;position:absolute;bottom:0;text-align:center;display:flex;align-items:center;justify-content:center;">
 	            <img style="width:37%;vertical-align:middle;" src="images/merchants_join/icon_1.png">
 	        </div>
         </div>
-		<div style="width:186px;height:100%;background-color:#ec652b;margin-right:20px;float:left;color:white;font-size:16pt;position:relative;">
-            <div style="width:100%;height:100px;padding-left:15px;box-sizing:border-box;-moz-box-sizing:border-box;
+		<div class="bottom-d-item" style="height:100%;background-color:#ec652b;float:left;color:white;position:relative;">
+            <div class="bottom-d-tiem-text" style="height:100px;box-sizing:border-box;-moz-box-sizing:border-box;
 -webkit-box-sizing:border-box;">
 				</br>
 				有2年以上城配</br>
 	            物流相关经验
             </div>
-            <div style="width:100%;position:absolute;bottom:0;height:100px;text-align:center;display:flex;align-items:center;justify-content:center;">
+            <div class="bottom-d-tiem-img" style="width:100%;position:absolute;bottom:0;text-align:center;display:flex;align-items:center;justify-content:center;">
 	            <img style="width:25%;vertical-align:middle;" src="images/merchants_join/icon_2.png">
 	        </div>
         </div>
-		<div style="width:186px;height:100%;background-color:#ec652b;margin-right:20px;float:left;color:white;font-size:16pt;position:relative;">
-            <div style="width:100%;height:100px;padding-left:15px;box-sizing:border-box;-moz-box-sizing:border-box;
+		<div class="bottom-d-item" style="height:100%;background-color:#ec652b;float:left;color:white;position:relative;">
+            <div class="bottom-d-tiem-text" style="height:100px;box-sizing:border-box;-moz-box-sizing:border-box;
 -webkit-box-sizing:border-box;">
 				</br>
 				年营业额100万</br>
 	            以上具有提送货</br>
 	            的能力
             </div>
-            <div style="width:100%;position:absolute;bottom:0;height:100px;text-align:center;display:flex;align-items:center;justify-content:center;">
+            <div class="bottom-d-tiem-img" style="width:100%;position:absolute;bottom:0;text-align:center;display:flex;align-items:center;justify-content:center;">
 	            <img style="width:20%;vertical-align:middle;" src="images/merchants_join/icon_3.png">
 	        </div>
         </div>
-		<div style="width:186px;height:100%;background-color:#ec652b;float:left;color:white;font-size:16pt;position:relative;">
-            <div style="width:100%;height:100px;padding-left:15px;box-sizing:border-box;-moz-box-sizing:border-box;
+		<div class="bottom-d-item no-right" style="height:100%;background-color:#ec652b;float:left;color:white;position:relative;">
+            <div class="bottom-d-tiem-text" style="height:100px;box-sizing:border-box;-moz-box-sizing:border-box;
 -webkit-box-sizing:border-box;">
 				</br>
 				在欲加盟区域内</br>
 	            有一定人脉
             </div>
-            <div style="width:100%;position:absolute;bottom:0;height:100px;text-align:center;display:flex;align-items:center;justify-content:center;">
+            <div class="bottom-d-tiem-img" style="width:100%;position:absolute;bottom:0;text-align:center;display:flex;align-items:center;justify-content:center;">
 	            <img style="width:29%;vertical-align:middle;" src="images/merchants_join/icon_4.png">
 	        </div>
         </div>
