--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html  lang="en">
 	<head>
 		<meta  http-equiv="Content-Type" content="text/html;charset=UTF-8">
-		<title>凯东源城配官网-专业的快消品城市配送服务商</title>
-		<meta name="keywords"  content="仓库租赁、仓库出租、商超配送、超市配送、门店配送、便利店配送、城市配送、快消品城配、仓配一体化、供应链优化、流通服务商" />
-		<meta name="description" content="凯东源城配可以为企业级客户提供仓库租赁、仓库托管、同城物流配送、商超配送、连锁便利店配送，涵盖仓到仓、仓到店等多种配送形式，能为客户提供分拣、分装、贴标、一件代发等增值服务。另有“流通服务商”模式专为品牌商提供快消品供应链优化服务。" />
+		<title>仓库出租-超市配送-商超配送-快消品城市配送专家[凯东源城配]</title>
+		<meta name="keywords"  content="仓库出租,超市配送,商超配送,城市配送,城市配送加盟,物流配送,物流配送公司,同城配送,同城物流配送,仓储配送" />
+		<meta name="description" content="凯东源城配专注城市配送服务,致力于为客户提供超市配送,商超配送,城市配送,同城配送,同城物流配送,仓储配送;凯东源城配是一家专业的快消品城市配送服务商,致力于解决物流各环节的成本和效率难题，为 厂家、品牌商、渠道商提供一站式物流解决方案。" />
 
 
 		<link rel="stylesheet" href="css/reset.css">
